Build on systems without strcasestr(). The non-strcasestr code is not optimized at all and about 15x slower.

BUG: 145502

svn path=/trunk/KDE/kdepimlibs/; revision=665647